tests/paczka1/small_fuzzy/84248414.err
Error in line 1: S925 A964 2,0
Error in line 2: S925 A245 48,7
Error in line 4: q1k8W7Ip S528 51,4
Error in line 11: nMT0rkZs A964 196,2
Error in line 13: q1k8W7Ip A245 41,5
